--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -17,6 +17,57 @@
     "2. How does economic growth impact pollution by country; is there a corellation between economic output and poluttion. \n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "gdp_clean_lst = []\n",
+    "\n",
+    "for year in range(1960, 2024): \n",
+    "    table = pd.read_html(f'https://countryeconomy.com/gdp?year={year}')\n",
+    "    \n",
+    "    #[:-1] removes the '< GDP yearGDP year >\t< GDP yearGDP year >\t< GDP yearGDP year >\tNaN' row\n",
+    "    clean_table = table[0][:-1].drop(['Annual GDP', 'Annual GDP.1', 'Annual GDP.3', 'GDP Growth (%).1'], axis = 1)\n",
+    "    clean_table.rename(columns={'Annual GDP.2': 'Annual GDP'}, inplace=True)\n",
+    "\n",
+    "    #replace nan with 0\n",
+    "    clean_table = clean_table.replace(np.nan, 0)\n",
+    "    \n",
+    "    #remove '$', ',' , 'M' and convert the string to int\n",
+    "    #ANNUAL GDP is in MILLION\n",
+    "    clean_table['Annual GDP'] = clean_table['Annual GDP'].replace('[\\$,M]', '', regex=True).astype(int)\n",
+    "    \n",
+    "    #remove '%' and convert the string to float\n",
+    "    clean_table['GDP Growth (%)'] = clean_table['GDP Growth (%)'].str.rstrip('%').astype(float)\n",
+    "    \n",
+    "    #remove '+' in Countries\n",
+    "    clean_table['Countries'] = clean_table['Countries'].replace(r'\\[\\+\\]', '', regex=True).astype(str)\n",
+    "    \n",
+    "    #combine 'Date' and 'Annual GDP' columns, make each year in 'Date' a column name\n",
+    "    clean_table = clean_table.pivot(index='Countries', columns='Date', values='Annual GDP')\n",
+    "\n",
+    "    gdp_clean_lst.append(clean_table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "gdp_1960_to_2023 = pd.concat(gdp_clean_lst, axis=1).reset_index()"
+   ]
   }
  ],
  "metadata": {
