added the list of assumptions we need to check

--- a/ProjectPhaseThree-WORK.ipynb
+++ b/ProjectPhaseThree-WORK.ipynb
@@ -253,13 +253,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/xw/yj2m39tn3rv0y3pw8fqb3nzm0000gn/T/ipykernel_92875/1401789788.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/xw/yj2m39tn3rv0y3pw8fqb3nzm0000gn/T/ipykernel_39989/1401789788.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  countries_by_incomes['CO2 Emission'] = countries_by_incomes['CO2 Emission'].fillna(countries_by_incomes['CO2 Emission'].mean())\n",
-      "/var/folders/xw/yj2m39tn3rv0y3pw8fqb3nzm0000gn/T/ipykernel_92875/1401789788.py:4: SettingWithCopyWarning: \n",
+      "/var/folders/xw/yj2m39tn3rv0y3pw8fqb3nzm0000gn/T/ipykernel_39989/1401789788.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -291,19 +291,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/xw/yj2m39tn3rv0y3pw8fqb3nzm0000gn/T/ipykernel_92875/2376184790.py:3: SettingWithCopyWarning: \n",
+      "/var/folders/xw/yj2m39tn3rv0y3pw8fqb3nzm0000gn/T/ipykernel_39989/2376184790.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  north_america['CO2 Emission'] = north_america['CO2 Emission'].fillna(north_america['CO2 Emission'].mean())\n",
-      "/var/folders/xw/yj2m39tn3rv0y3pw8fqb3nzm0000gn/T/ipykernel_92875/2376184790.py:7: SettingWithCopyWarning: \n",
+      "/var/folders/xw/yj2m39tn3rv0y3pw8fqb3nzm0000gn/T/ipykernel_39989/2376184790.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  south_asia['CO2 Emission'] = south_asia['CO2 Emission'].fillna(south_asia['CO2 Emission'].mean())\n",
-      "/var/folders/xw/yj2m39tn3rv0y3pw8fqb3nzm0000gn/T/ipykernel_92875/2376184790.py:11: SettingWithCopyWarning: \n",
+      "/var/folders/xw/yj2m39tn3rv0y3pw8fqb3nzm0000gn/T/ipykernel_39989/2376184790.py:11: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -818,7 +818,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/xw/yj2m39tn3rv0y3pw8fqb3nzm0000gn/T/ipykernel_92875/3949008468.py:8: SettingWithCopyWarning: \n",
+      "/var/folders/xw/yj2m39tn3rv0y3pw8fqb3nzm0000gn/T/ipykernel_39989/3949008468.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1652,7 +1652,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- linearity: \n",
+    "- auto correlation:  \n",
+    "- normality: \n",
+    "- Homoscedasticity:"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1682,7 +1687,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/xw/yj2m39tn3rv0y3pw8fqb3nzm0000gn/T/ipykernel_92875/1021543344.py:7: SettingWithCopyWarning: \n",
+      "/var/folders/xw/yj2m39tn3rv0y3pw8fqb3nzm0000gn/T/ipykernel_39989/1021543344.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2623,11 +2628,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- linearity: \n",
+    "- auto correlation:  \n",
+    "- normality: \n",
+    "- Homoscedasticity:"
+   ]
   },
   {
    "cell_type": "code",
@@ -2890,11 +2898,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- linearity: \n",
+    "- auto correlation:  \n",
+    "- normality: \n",
+    "- Homoscedasticity:"
+   ]
   },
   {
    "cell_type": "code",
@@ -3143,32 +3154,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- linearity: \n",
+    "- auto correlation:  \n",
+    "- normality: \n",
+    "- Homoscedasticity:"
+   ]
   },
   {
    "cell_type": "code",
