included the assumptions checks

--- a/ProjectPhaseThree-WORK.ipynb
+++ b/ProjectPhaseThree-WORK.ipynb
@@ -1653,15 +1653,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- linearity: \n",
-    "- auto correlation:  \n",
-    "- normality: \n",
-    "- Homoscedasticity:"
+    "- linearity: good, there are 4 outliers. Residuals are cluttered when `GDP per Capita` and `Total Population` are small. \n",
+    "- auto correlation: good, we have included multiple X attributes `GDP per Capita`, `Total Population`, `Year` and One Hot Encoded `income level`\n",
+    "- normality: yes, residuals are mostly centered around 0\n",
+    "- Homoscedasticity:\n",
+    "  - residuals are less cluttered, more spread out in a negative wave pattern as `Total Population` increases.\n",
+    "  - residuals are less cluttered, more spread out in a positive wave pattern as `GDP per Capita` increases. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Ethical considerations:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -2631,18 +2642,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- linearity: \n",
-    "- auto correlation:  \n",
-    "- normality: \n",
-    "- Homoscedasticity:"
+    "- linearity: good, there are 3 outliers. `Total Population` is a bit strange looking because of the gap where there's no residual. \n",
+    "- auto correlation: good, we have included multiple X attributes `GDP per Capita`, `Total Population`, `Year` and One Hot Encoded `income level`\n",
+    "- normality: yes, residuals are mostly centered around 0\n",
+    "- Homoscedasticity:\n",
+    "  - residuals are less cluttered and more centered around 0 as `GDP per Capita` increases\n",
+    "  - residuals are less cluttered but more spread out around 0 as `Total Population` increases. There is a gap where no residual is located when `Total Population` is between -0.5 and 0.5"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Ethical considerations:"
+   ]
   },
   {
    "cell_type": "code",
@@ -2901,18 +2914,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- linearity: \n",
-    "- auto correlation:  \n",
-    "- normality: \n",
-    "- Homoscedasticity:"
+    "- linearity: good, there are 2 outliers. Residuals are cluttered when `Total Population` is small. There is a gap where there is no Residual when `Total Population` is between -0.25 to 0.25 .\n",
+    "- auto correlation: good, we have included One Hot Encoded `Regions` into the X attribute `Total Population`\n",
+    "- normality: yes, residuals are mostly centered around 0\n",
+    "- Homoscedasticity:\n",
+    "  - residuals are more cluttered in a zig-zag pattern when `Total Population` is between -1 to -0.5, then there's a gap where there is no residual when `Total Population` is between -0.25 to 0.25. When `Total Population` is 0.25 to beyond, residuals are spread out around 0 in a descending curve."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Ethical considerations:"
+   ]
   },
   {
    "cell_type": "code",
@@ -3157,18 +3171,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- linearity: \n",
-    "- auto correlation:  \n",
-    "- normality: \n",
-    "- Homoscedasticity:"
+    "- linearity: good, there are 4 outliers. Residuals are cluttered when `Total Population` is small. There is a gap where there is no Residual when `Total Population` is between -0.5 to 0.25 .\n",
+    "- auto correlation: good, we have included One Hot Encoded `Income Level` into the X attribute `Total Population`\n",
+    "- normality: yes, residuals are mostly centered around 0\n",
+    "- Homoscedasticity:\n",
+    "  - Residuals are cluttered when `Total Population` is small. There is a gap where there is no Residual when `Total Population` is between -0.5 to 0.25 . Residuals follow a decreasing trend when `Total Population` is between 0.25 to 1.5, then follow an increasing trend"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Ethical considerations:"
+   ]
   },
   {
    "cell_type": "code",
