added observations to last two scatter plots

--- a/ProjectPhaseThree-WORK.ipynb
+++ b/ProjectPhaseThree-WORK.ipynb
@@ -3117,6 +3117,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Main Observations: Residuals vs. Index plot\n",
+    "### Most of the residuals in this graph lie within the range (-5000 to 5000).\n",
+    "\n",
+    "## At the lower-left hand corner there is an outlier - which means that the model estimates lower than the actual value.\n",
+    "### This may mean that there is a country with very high CO2 emmissions, potentially due to major events in that country or just high CO2 Emmissions compared to the predictions. \n",
+    "\n",
+    "## There is also a group of outliers around index zero at residual 5000, which residuals are just a bit higher than the rest of the graph. \n",
+    "### Which means that there was a overestimation by the model. This could mean that those countries have more climate aware and have more \"green\" policies, or that there is a inconsistancy that causes a relatively low C02 emmission.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 65,
    "metadata": {},
@@ -3140,6 +3155,20 @@
     "plt.ylabel(\"residuals\")\n",
     "plt.title(\"Population vs Res plot\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Observation: Population vs. Residuals plot\n",
+    "## Most of the residuals are between the population -1.0 and 0\n",
+    "### The one of most significant outlier is at the residual -15,000 and population of 2.0, which represents where the model severly underpredicted the CO2 levels compared to the population. This could mean that that country produces a lot of materials and goods which could lead to high CO2 emmission.\n",
+    "## Another outlier is around population -0.5 and residual 9000, the model predicted a way higher CO2 than the actual emissions/.\n",
+    "### This could be due to a country that just doesn't indrustrailize as much as other countries with similar populations.\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
