--- a/ProjectPhaseThree-WORK.ipynb
+++ b/ProjectPhaseThree-WORK.ipynb
@@ -2614,6 +2614,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analysis of Tital Population vs Res Plot\n",
+    "- For population from -1.0 to around 0.3, most of the residuals are grouped around zero. Which means that the model predicted more accurately countries with smaller total populations but there are some underestimations past 1.0. \n",
+    "\n",
+    "- There is a clear outlier at (2.7, -16,000).\n",
+    "- This implies that there is a severe underestimation for a country with a really big total population. \n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
@@ -2860,6 +2872,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analysis from Residual plot vs. Index\n",
+    "- The pattern of the residual plot vs the index is kind of in a zig-zag pattern with alternating upwards and downwards trends.\n",
+    "- This means that the residuals are not completly independant of the index -  or that the data points may influence each other. \n",
+    "- There is a clear outlier at (-4000, 110) and it could be due to an extreme case or an anomaly in the data. \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 57,
    "metadata": {},
@@ -2886,6 +2908,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analysis of Population vs Res Plot\n",
+    "- For population from -1.0 to around 0.7, most of the residuals are grouped around zero. Which means that the model predicted more accurately countries with smaller populations but there are some underestimations. \n",
+    "\n",
+    "- There is a clear outlier at (-0.5, -3000).\n",
+    "- There is a clear underestimation by the model of CO2 emissions. The outlier could have high industrialization but low population which would account for it being an outlier in the plot graph. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
@@ -2908,6 +2947,20 @@
     "plt.xlabel(\"residuals\")\n",
     "plt.title(\"histogram of residuals\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analysis of Histogram of Residuals:\n",
+    "- Most the residuals are around 0, so we can say the model is generally pretty accurate. As most of the plot points are a good prediction from the model. \n",
+    "- The histogram is skewed to the left, so we can say on average the model underestimated the amount of CO2 emissions from a significant amount of countries. \n",
+    "\n",
+    "- There is a outlier around residual -3500.\n",
+    "- The outlier could be from missing data, or maybe a country has a unique situation when it comes to CO2 emissions because of an external factor we did not take into consideration with our data. \n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -3120,14 +3173,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Main Observations: Residuals vs. Index plot\n",
-    "### Most of the residuals in this graph lie within the range (-5000 to 5000).\n",
+    " # Main Observations: Residuals vs. Index plot\n",
+    " - Most of the residuals in this graph lie within the range (-5000 to 5000).\n",
+    " - At the lower-left hand corner there is an outlier - which means that the model estimates lower than the actual value.\n",
+    " - This may mean that there is a country with very high CO2 emmissions, potentially due to major events in that country or just high CO2 Emmissions compared to the predictions. \n",
     "\n",
-    "## At the lower-left hand corner there is an outlier - which means that the model estimates lower than the actual value.\n",
-    "### This may mean that there is a country with very high CO2 emmissions, potentially due to major events in that country or just high CO2 Emmissions compared to the predictions. \n",
-    "\n",
-    "## There is also a group of outliers around index zero at residual 5000, which residuals are just a bit higher than the rest of the graph. \n",
-    "### Which means that there was a overestimation by the model. This could mean that those countries have more climate aware and have more \"green\" policies, or that there is a inconsistancy that causes a relatively low C02 emmission.\n",
+    "- There is also a group of outliers around index zero at residual 5000, which residuals are just a bit higher than the rest of the graph.  Which means that there was a overestimation by the model. This could mean that those countries have more climate aware and have more \"green\" policies, or that there is a inconsistancy that causes a relatively low C02 emmission.\n",
     "\n"
    ]
   },
@@ -3161,11 +3212,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Observation: Population vs. Residuals plot\n",
-    "## Most of the residuals are between the population -1.0 and 0\n",
-    "### The one of most significant outlier is at the residual -15,000 and population of 2.0, which represents where the model severly underpredicted the CO2 levels compared to the population. This could mean that that country produces a lot of materials and goods which could lead to high CO2 emmission.\n",
-    "## Another outlier is around population -0.5 and residual 9000, the model predicted a way higher CO2 than the actual emissions/.\n",
-    "### This could be due to a country that just doesn't indrustrailize as much as other countries with similar populations.\n",
+    "# Main Observations: Population vs. Residuals plot\n",
+    "- Most of the residuals are between the population -1.0 and 0\n",
+    "- The one of most significant outlier is at the residual -15,000 and population of 2.0, which represents where the model severly underpredicted the CO2 levels compared to the population. This could mean that that country produces a lot of materials and goods which could lead to high CO2 emmission.\n",
+    "- Another outlier is around population -0.5 and residual 9000, the model predicted a way higher CO2 than the actual emissions.\n",
+    "This could be due to a country that just doesn't indrustrailize as much as other countries with similar populations.\n",
     "\n",
     "\n",
     "\n"
