--- a/ProjectPhaseThree-WORK.ipynb
+++ b/ProjectPhaseThree-WORK.ipynb
@@ -613,6 +613,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In this scatter plot outliers are seen at the high population levels where CO2 emissions deviate considerably from the regression line. These outliers could be due to differences in energy consumption patterns or environmental policies across different countries/states in North America. A key assumption of the model is that population is linearly correlated to CO2, which could potentially be false given the complicated relationship involving additional social/economic policies and geographical factors."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Predict North America's CO2 Emission with GDP per Capita"
    ]
   },
@@ -786,6 +793,15 @@
    ],
    "source": [
     "show_fit(X_GDP_NA, y_NA, mfull_NA[1], mfull_NA[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Positive trend is shown. This means that higher GDP per capita is generally associated with higher CO2 emissions, which could be due to increased industrialization, energy consumption, or transportation in wealthier regions. However, the high MSE indicates a great amount of variability that GDP per capita alone cannot explain on its own. Outliers are evident in the plot, especially at higher GDP per capita regions where some nations have significantly lower CO2 emissions than predicted.\n",
+    "These outliers could be because of differences in energy efficiency, reliance on renewable energy sources, or effective environmental regulations in wealthier countries.\n",
+    "The model shows a linear relationship between GDP per capita and CO2 emissions."
    ]
   },
   {
@@ -1573,6 +1589,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Although the majority of residuals are scattered close to zero, there are patterns in the plot which suggest non-randomness and a potential violation of the linear regression assumption of homoscedasticity. This means that the model potentially won't be able to identify the data trends, because of missing variables or non-linear relationships. There's a clear outlier at around index 1000 with a value near -3000, which could be due to values that deviate greatly from the basic trend. These outliers might be caused by errors in the collection of our data or from unique regional"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
@@ -1599,6 +1622,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The curved pattern suggests the presence of non-linearity in the data, violating the linearity assumption inherent in linreg models. There's a clear outlier at around\n",
+    "-3000 at and high GDP per Capita. This outlier may be because of values associated with regions that have unique economic or environmental conditions, such as highly industrialized areas with efficient energy policies or low-emission energy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
@@ -1622,6 +1653,13 @@
     "plt.ylabel(\"residuals\")\n",
     "plt.title(\"Total Population vs Res plot\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The residual plot for Total Population versus residuals shows a clear curved pattern, indicating that the relationship between Total Population and CO2 emissions is most probably non-linear. There also seems to be heteroscedasticity, with the variance of residuals increasing as population rises. There are clear outliers shown at -3000 residuals, probably from countries/regions with high population densities but efficient energy use or low industrial activity."
    ]
   },
   {
@@ -2562,6 +2600,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Residual Plot vs. Index\n",
+    "There's a non randomness within the residuals which means there might be a correlation between the residuals. Past index 60, there's a curve which could indiciate a common trend within all countries. The outlier near index 0, could be a country with outdated. information. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
@@ -2585,6 +2631,14 @@
     "plt.ylabel(\"residuals\")\n",
     "plt.title(\"GDP per Capita vs Res plot\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# GDP per Capita vs Res Plot\n",
+    "There’s a random cluster of residuals between -0.7 and 0, which might mean the model struggles with lower GDP values. After that, it straightens out, showing a better fit for higher GDP.  The model might not accurately capture the relationship between GDP and the target variable for countries with lower GDP, leading to the clustered residuals. For higher GDP values, the residuals stabilize, suggesting the model performs better in this range with higher GDP."
    ]
   },
   {
@@ -3262,7 +3316,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ethical considerations:"
+    "# Ethical considerations:\n",
+    " Developing countries may have inaccurate data on CO2 emissions and their GDP, which could lead to some biased conclusions. Also, correlation does not mean causation and our findings could blame some nations for CO2 emissions who aren't at fault. Also, due to big corporations in developed countries using land and labor in developing countries could heighten the CO2 emissions levels in developing countries which would put the blame of pollution on these countries in an unfair manner."
    ]
   },
   {
